refactoring: use rx blocking api instead of annimon