@@ -21,8 +21,6 @@ import android.widget.ImageView;
 import android.widget.ListAdapter;
 import android.widget.PopupWindow;
 
-import com.annimon.stream.Collectors;
-import com.annimon.stream.Stream;
 import com.arellomobile.mvp.presenter.InjectPresenter;
 import com.mikepenz.materialdrawer.AccountHeader;
 import com.mikepenz.materialdrawer.Drawer;
@@ -37,13 +35,14 @@ import java.util.ArrayList;
 import java.util.List;
 
 import butterknife.ButterKnife;
+import io.reactivex.Observable;
 import ru.android.childdiary.R;
 import ru.android.childdiary.di.ApplicationComponent;
 import ru.android.childdiary.domain.interactors.child.Child;
 import ru.android.childdiary.presentation.calendar.CalendarFragment;
-import ru.android.childdiary.presentation.core.adapters.swipe.FabController;
 import ru.android.childdiary.presentation.core.BaseMvpActivity;
 import ru.android.childdiary.presentation.core.ExtraConstants;
+import ru.android.childdiary.presentation.core.adapters.swipe.FabController;
 import ru.android.childdiary.presentation.development.DevelopmentDiaryFragment;
 import ru.android.childdiary.presentation.exercises.ExercisesFragment;
 import ru.android.childdiary.presentation.help.HelpFragment;
@@ -194,9 +193,10 @@ public class MainActivity extends BaseMvpActivity implements MainView,
                     .withIdentifier(PROFILE_SETTINGS_DELETE));
         }
 
-        profiles.addAll(Stream.of(childList)
+        profiles.addAll(Observable.fromIterable(childList)
                 .map(child -> mapToProfile(this, child))
-                .collect(Collectors.toList()));
+                .toList()
+                .blockingGet());
 
         closeDrawerWithoutAnimation();
         if (accountHeader != null) {
